# model-fc

./: pyproject.toml
src/model_fc/: models.py
test/: test_models.py
