[project]
name = "model_fc"

dynamic = ["version"]
authors = [
  {name="McKenzie Hagen", email="mphagen@uw.edu"}

]
description = "calculating model-based connectomes"
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
  "numpy",
  "nilearn",
  "pyuoi@git+https://github.com/nrdg/pyuoi.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
  dev = ["pre-commit",
         "pytest"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["model_fc*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "C",
  "W",
  "B",
  "I",
]
ignore = [
  "B905",
  "C901",
  "E203",
  "F821"
]

[tool.ruff.lint.per-file-ignores]
"docs/_templates/numpydoc_docstring.py" = ["F821", "B018"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"